// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`markdown should match snapshots: commented-sample 1`] = `
Array [
  Object {
    "checkJS": false,
    "content": "function somethingDangerous() {}",
    "id": Object {
      "descriptor": "./commented-sample.md:5",
      "key": "commented-sample-5",
    },
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "commented-sample.md",
    "tsOptions": Object {},
  },
  Object {
    "checkJS": false,
    "content": "let val = null;  // Type is any
try {
  somethingDangerous();
  val = 12;
  val  // Type is number
} catch (e) {
  console.warn('alas!');
}
val  // Type is number | null",
    "id": Object {
      "descriptor": "./commented-sample.md:10",
      "key": "commented-sample-10",
    },
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [
      Object {
        "id": Object {
          "descriptor": "./commented-sample.md:5",
          "key": "commented-sample-5",
        },
      },
    ],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "commented-sample.md",
    "tsOptions": Object {},
  },
]
`;

exports[`markdown should match snapshots: doc1 1`] = `
Array [
  Object {
    "checkJS": false,
    "content": "function greet(who: string) {
  console.log('Hello', who);
}",
    "id": Object {
      "descriptor": "./doc1.md:2",
      "key": "greet-ts",
    },
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "doc1.md",
    "tsOptions": Object {},
  },
  Object {
    "checkJS": false,
    "content": "console.log(\\"end of file\\");
",
    "id": Object {
      "descriptor": "./doc1.md:19",
      "key": "doc1-19",
    },
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "doc1.md",
    "tsOptions": Object {},
  },
]
`;

exports[`markdown should match snapshots: multilinetype 1`] = `
Array [
  Object {
    "checkJS": false,
    "content": "const o = {x: 1, y: 2};
// type is {
//   x: number;
//   y: number;
// }",
    "id": Object {
      "descriptor": "./multilinetype.md:3",
      "key": "multilinetype-3",
    },
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "multilinetype.md",
    "tsOptions": Object {},
  },
  Object {
    "checkJS": false,
    "content": "function addWithExtras(a: number, b: number) {
  const c = a + b;  // type is number
  // ...
  return c;
}",
    "id": Object {
      "descriptor": "./multilinetype.md:13",
      "key": "multilinetype-13",
    },
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "multilinetype.md",
    "tsOptions": Object {},
  },
]
`;

exports[`markdown should match snapshots: noid 1`] = `
Array [
  Object {
    "checkJS": false,
    "content": "console.log('Hello', 'TS');",
    "id": Object {
      "descriptor": "./noid.md:7",
      "key": "noid-7",
    },
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "noid.md",
    "tsOptions": Object {},
  },
]
`;

exports[`markdown should match snapshots: prepend 1`] = `
Array [
  Object {
    "checkJS": false,
    "content": "type AB = 'a' | 'b';",
    "id": Object {
      "descriptor": "./prepend.md:1",
      "key": "prefix",
    },
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "prepend.md",
    "tsOptions": Object {},
  },
  Object {
    "checkJS": false,
    "content": "const a: AB = 'a';",
    "id": Object {
      "descriptor": "./prepend.md:6",
      "key": "combined",
    },
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [
      Object {
        "id": Object {
          "descriptor": "./prepend.md:1",
          "key": "prefix",
        },
      },
    ],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "prepend.md",
    "tsOptions": Object {},
  },
  Object {
    "checkJS": false,
    "content": "const a: AB = 'a';",
    "id": Object {
      "descriptor": "./prepend.md:13",
      "key": "final",
    },
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "prepend.md",
    "tsOptions": Object {},
  },
]
`;

exports[`markdown should match snapshots: prepend-multiple 1`] = `
Array [
  Object {
    "checkJS": false,
    "content": "type AB = 'a' | 'b';",
    "id": Object {
      "descriptor": "./prepend-multiple.md:2",
      "key": "prepend-multiple-2",
    },
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "prepend-multiple.md",
    "tsOptions": Object {},
  },
  Object {
    "checkJS": false,
    "content": "type ABC = AB | 'c';",
    "id": Object {
      "descriptor": "./prepend-multiple.md:7",
      "key": "prepend-multiple-7",
    },
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [
      Object {
        "id": Object {
          "descriptor": "./prepend-multiple.md:2",
          "key": "prepend-multiple-2",
        },
      },
    ],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "prepend-multiple.md",
    "tsOptions": Object {},
  },
  Object {
    "checkJS": false,
    "content": "const c: ABC = 'c';",
    "id": Object {
      "descriptor": "./prepend-multiple.md:11",
      "key": "prepend-multiple-11",
    },
    "isTSX": false,
    "language": "ts",
    "nodeModules": Array [],
    "prefixes": Array [
      Object {
        "id": Object {
          "descriptor": "./prepend-multiple.md:2",
          "key": "prepend-multiple-2",
        },
      },
      Object {
        "id": Object {
          "descriptor": "./prepend-multiple.md:7",
          "key": "prepend-multiple-7",
        },
      },
    ],
    "sectionHeader": null,
    "sectionId": null,
    "sourceFile": "prepend-multiple.md",
    "tsOptions": Object {},
  },
]
`;

exports[`markdown should match snapshots: skip 1`] = `Array []`;
